--- a/client/src/components/css/onecard.css
+++ b/client/src/components/css/onecard.css
@@ -11,12 +11,20 @@
 }
 
 .name{
-    font-size: 32px;
+    font-size: 24px;
 }
 
 .btnCard{
     margin-top: 20px;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid black; 
     
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.addLike{
+    margin-top: auto;
+    margin-bottom: auto;
 }
