--- a/client/src/components/css/onecard.css
+++ b/client/src/components/css/onecard.css
@@ -17,10 +17,10 @@
 .btnCard{
     margin-top: 20px;
     text-align: center;
+    justify-content: center;
     border: 2px solid black; 
     
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 130px;
     
 }
 
